@@ -1,6 +1,9 @@
 # Changelog
 All notable changes to this project will be documented in this file.
 
+## Future release
+### Added
+- distributions: dirichlet
 
 ## [0.4] - 2023-09-01
 # Blog post: TBA
